implement about.html view

--- a/about.html
+++ b/about.html
@@ -313,8 +313,8 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Roberto Torres</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <h6 class="font-weight-bold dark-grey-text small">robertotorres@soufunstudio.com</h6>
                         <p><small class="text-muted">Unity developer</small></p>
-                        <p><small class="text-muted">robertotorres@soufunstudio.com</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-2">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
@@ -388,8 +388,8 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Elizabeth Librado</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <h6 class="font-weight-bold dark-grey-text small">eli.so.12@soufunstudio.com</h6>
                         <p><small class="text-muted">Graphic Designer</small></p>
-                        <p><small class="text-muted">eli.so.12@soufunstudio.com</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-3">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
@@ -458,8 +458,8 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Keyla Ávila</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
+                        <h6 class="font-weight-bold dark-grey-text small">keylavila@soufunstudio.com</h6>
                         <p><small class="text-muted">SouFUN Graphic Designer and Illustrator</small></p>
-                        <p><small class="text-muted">keylavila@soufunstudio.com</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-4">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
@@ -518,8 +518,8 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Victor Sarabia</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
+                        <h6 class="font-weight-bold dark-grey-text small">dgsarabia@soufunstudio.com</h6>
                         <p><small class="text-muted">Multimedia Designer</small></p>
-                        <p><small class="text-muted">dgsarabia@soufunstudio.com</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-5">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
