implement about.html view

--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
                     <div class="face-front">
                       <!-- Image -->
                       <div class="card-up mx-auto">
-                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image" data-toggle="popover-hover" title="Contact" data-content="germanperez@soufunstudio.com">
+                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
                       </div>
                       <!-- Avatar -->
                       <div class="mini-avatar mx-auto">
