implement services.html view

--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
     <div class="container-fluid">
 
       <!--Services container-->
-      <div class="container z-depth-1 my-5 p-5 elegant-color-dark">
+      <div class="container my-5 elegant-color-dark">
 
         <!-- Section -->
         <section>
@@ -165,41 +165,46 @@
           <p class="lead text-center text-white-50 pt-2 mb-5">Join thousands of satisfied customers using our template
             globally.</p>
 
-          <div class="row d-flex justify-content-center">
+          <div class="row">
 
-            <div class="col-md-6 col-xl-4">
-              <h5 class="font-weight-normal"><a class="dark-grey-text" href="#">Website Design</a></h5>
-              <p class="small grey-text">Responsive, Minimalism</p>
+            <div class="col-md-6 col-xl-3 mb-4">
+              <div class="card text-center bg-success text-white">
+                <div class="card-body">
+                  <p class="mt-4 pt-2"><i class="far fa-object-ungroup fa-4x"></i></p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Web Design</a></h5>
+                  <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                </div>
+              </div>
             </div>
 
-            <div class="col-md-6">
-              <p class="text-muted mb-5 pb-2">So delightful up dissimilar by unreserved it connection frequently. Do an high room so in paid. Up on
-                cousin ye dinner should in. Sex stood tried walls manor truth shy and three his. Their to years so child
-                truth. Honoured peculiar families sensible up likewise by on in.</p>
+            <div class="col-md-6 col-xl-3 mb-4">
+              <div class="card text-center">
+                <div class="card-body">
+                  <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile App</a></h5>
+                  <p class="text-muted mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                </div>
+              </div>
             </div>
 
-
-            <div class="col-md-6 col-xl-4">
-              <h5 class="font-weight-normal"><a class="dark-grey-text" href="#">Web Development</a></h5>
-              <p class="small grey-text">PHP, MySQL, Laravel</p>
+            <div class="col-md-6 col-xl-3 mb-4">
+              <div class="card text-center deep-purple lighten-1 text-white">
+                <div class="card-body">
+                  <p class="mt-4 pt-2"><i class="fas fa-chart-line fa-4x"></i></p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Digital Marketing</a></h5>
+                  <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                </div>
+              </div>
             </div>
 
-            <div class="col-md-6">
-              <p class="text-muted mb-5 pb-2">So delightful up dissimilar by unreserved it connection frequently. Do an high room so in paid. Up on
-                cousin ye dinner should in. Sex stood tried walls manor truth shy and three his. Their to years so child
-                truth. Honoured peculiar families sensible up likewise by on in.</p>
-            </div>
-
-
-            <div class="col-md-6 col-xl-4">
-              <h5 class="font-weight-normal"><a class="dark-grey-text" href="#">Mobile App</a></h5>
-              <p class="small grey-text">Andriod, iOS</p>
-            </div>
-
-            <div class="col-md-6">
-              <p class="text-muted mb-5 pb-2">So delightful up dissimilar by unreserved it connection frequently. Do an high room so in paid. Up on
-                cousin ye dinner should in. Sex stood tried walls manor truth shy and three his. Their to years so child
-                truth. Honoured peculiar families sensible up likewise by on in.</p>
+            <div class="col-md-6 col-xl-3">
+              <div class="card text-center">
+                <div class="card-body">
+                  <p class="mt-4 pt-2"><i class="fas fa-bullhorn fa-4x grey-text"></i></p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Branding Package</a></h5>
+                  <p class="text-muted mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                </div>
+              </div>
             </div>
 
           </div>
