--- a/services.html
+++ b/services.html
@@ -159,7 +159,7 @@
         <!-- Section -->
         <section>
 
-          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4">Services</h6>
+          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Services</h6>
           <h3 class="font-weight-bold text-center text-white pb-2">Our Services</h3>
           <hr class="w-header my-4">
           <p class="lead text-center text-white-50 pt-2 mb-5">Join thousands of satisfied customers using our template
