--- a/services.html
+++ b/services.html
@@ -197,7 +197,7 @@
               </div>
             </div>
 
-            <div class="col-md-6 col-xl-3">
+            <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-bullhorn fa-4x grey-text"></i></p>
