--- a/services.html
+++ b/services.html
@@ -170,7 +170,7 @@
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center bg-success text-white">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="far fa-object-ungroup fa-4x"></i></p>
+                  <p class="mt-4 pt-2"><i class="fas fa-gamepad fa-4x"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Web Design</a></h5>
                   <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
                 </div>
@@ -190,7 +190,7 @@
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center deep-purple lighten-1 text-white">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="fas fa-chart-line fa-4x"></i></p>
+                  <p class="mt-4 pt-2"><i class="fas fa-vr-cardboard fa-4x"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Digital Marketing</a></h5>
                   <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
                 </div>
@@ -200,7 +200,7 @@
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="fas fa-bullhorn fa-4x grey-text"></i></p>
+                  <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x grey-text"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Branding Package</a></h5>
                   <p class="text-muted mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
                 </div>
