implement services.html view

--- a/services.html
+++ b/services.html
@@ -156,7 +156,7 @@
       <!--Services container-->
       <div class="container my-5 elegant-color-dark">
 
-        <!-- Section -->
+        <!-- Section Services-->
         <section>
 
           <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Services</h6>
@@ -165,52 +165,87 @@
           <p class="lead text-center text-white-50 pt-2 mb-5">Join thousands of satisfied customers using our template
             globally.</p>
 
+          <!--Grid row-->
           <div class="row">
 
+            <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center bg-success text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-gamepad fa-4x"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Web Design</a></h5>
-                  <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Gamification</a></h5>
+                  <p class="mb-4">Do you have a project which you want gamified?
+                    Don't worry, we will analyze your project and give you a
+                    proposal to gamify and develop it. If you want to know more
+                    about what is gamification you can see it
+                    <a class="text-white" href="https://www.bunchball.com/gamification">here</a></p>
                 </div>
               </div>
             </div>
+            <!--Grid column-->
 
+            <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile App</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile Game App</a></h5>
                   <p class="text-muted mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
                 </div>
               </div>
             </div>
+            <!--Grid column-->
 
+            <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center deep-purple lighten-1 text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-vr-cardboard fa-4x"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Digital Marketing</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Virtual Reality</a></h5>
                   <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
                 </div>
               </div>
             </div>
+            <!--Grid column-->
 
+
+          </div>
+          <!--Grid row-->
+
+          <!--Grid row-->
+          <div class="row">
+
+            <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x grey-text"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Branding Package</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Augumented Reality</a></h5>
                   <p class="text-muted mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
                 </div>
               </div>
             </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-6 col-xl-3 mb-4">
+              <div class="card text-center bg-success text-white">
+                <div class="card-body">
+                  <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x"></i></p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">PC Games</a></h5>
+                  <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                </div>
+              </div>
+            </div>
+            <!--Grid column-->
 
           </div>
+          <!--Grid row-->
+
+
 
         </section>
-        <!-- Section -->
+        <!-- Section Services-->
 
       </div>
       <!--Services container-->
