implement services.html view

--- a/services.html
+++ b/services.html
@@ -166,7 +166,7 @@
             globally.</p>
 
           <!--Grid row-->
-          <div class="row">
+          <div class="row d-flex justify-content-center">
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
@@ -178,7 +178,7 @@
                     Don't worry, we will analyze your project and give you a
                     proposal to gamify and develop it. If you want to know more
                     about what is gamification you can see it
-                    <a class="text-white" href="https://www.bunchball.com/gamification">here</a></p>
+                    <a class="badge badge-primary text-wrap" href="https://www.bunchball.com/gamification" target="_blank">here</a></p>
                 </div>
               </div>
             </div>
@@ -213,7 +213,7 @@
           <!--Grid row-->
 
           <!--Grid row-->
-          <div class="row">
+          <div class="row d-flex justify-content-center">
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
