--- a/services.html
+++ b/services.html
@@ -162,7 +162,7 @@
           <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Services</h6>
           <h3 class="font-weight-bold text-center text-white pb-2">Our Services</h3>
           <hr class="w-header my-4">
-          <p class="lead text-center text-white-50 pt-2 mb-5">Join thousands of satisfied customers using our template
+          <p class="lead text-center text-white pt-2 mb-5">Join thousands of satisfied customers using our template
             globally.</p>
 
           <!--Grid row-->
@@ -178,7 +178,7 @@
                     Don't worry, we will analyze your project and give you a
                     proposal to gamify and develop it. If you want to know more
                     about what is gamification you can see it
-                    <a class="badge badge-primary text-wrap" href="https://www.bunchball.com/gamification" target="_blank">here</a></p>
+                    <a class="text-info" href="https://www.bunchball.com/gamification" target="_blank">here</a></p>
                 </div>
               </div>
             </div>
@@ -190,7 +190,10 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile Game App</a></h5>
-                  <p class="text-muted mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                  <p class="text-muted mb-4">Do you have a game in mind and want to
+                    develop it on mobile devices for android and ios? We will give
+                    you a quote and start development for you, do not hesitate to
+                    contact us.</p>
                 </div>
               </div>
             </div>
