--- a/services.html
+++ b/services.html
@@ -205,7 +205,10 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-vr-cardboard fa-4x"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Virtual Reality</a></h5>
-                  <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                  <p class="mb-4">Today virtual reality has advanced by leaps and bounds,
+                    in industries such as tourism, archaeological and historical sites,
+                    to name a few examples, don't stay behind and give it a chance to
+                    have your own virtual reality project.</p>
                 </div>
               </div>
             </div>
