--- a/services.html
+++ b/services.html
@@ -191,9 +191,9 @@
                   <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile Game App</a></h5>
                   <p class="text-muted mb-4">Do you have a game in mind and want to
-                    develop it on mobile devices for android and ios? We will give
-                    you a quote and start development for you, do not hesitate to
-                    contact us.</p>
+                    develop it on mobile devices for android and ios?, we will do it
+                    for you and we will give you a quote and start development, do not
+                    hesitate to contact us.</p>
                 </div>
               </div>
             </div>
