implement services.html view

--- a/services.html
+++ b/services.html
@@ -191,8 +191,8 @@
                   <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile Game App</a></h5>
                   <p class="text-muted mb-4">Do you have a game in mind for years and want to
-                    develop it on mobile devices for android and ios?, we will do it
-                    for you and we will give you a quote and start development, do not
+                    develop it on mobile devices for android and ios?, we will do it for you,
+                    prepare the backlog and give you a quote and start development, do not
                     hesitate to contact us.</p>
                 </div>
               </div>
@@ -227,7 +227,10 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x grey-text"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Augumented Reality</a></h5>
-                  <p class="text-muted mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                  <p class="text-muted mb-4">augmented reality has been one of the most recent
+                    attractions for all users, such as video games, education, general entertainment
+                    and even movies, if you want to have an augmented reality project in your hands,
+                    we will develop it for you.</p>
                 </div>
               </div>
             </div>
@@ -239,7 +242,10 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">PC Games</a></h5>
-                  <p class="mb-4">He polite be object change. Consider no overcame yourself sociable children.</p>
+                  <p class="mb-4">PC games have always been one of the most attractive for users
+                    who always like to play from the computer. Do you have a great idea of ​​a video
+                    game that you want to develop? Contact us and let us create that great game that
+                    you have in mind.</p>
                 </div>
               </div>
             </div>
