--- a/services.html
+++ b/services.html
@@ -170,7 +170,7 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
-              <div class="card text-center bg-success text-white">
+              <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-gamepad fa-4x"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Gamification</a></h5>
@@ -186,7 +186,7 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
-              <div class="card text-center">
+              <div class="card text-center bg-service-card">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile Game App</a></h5>
@@ -201,7 +201,7 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
-              <div class="card text-center deep-purple lighten-1 text-white">
+              <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-vr-cardboard fa-4x"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Virtual Reality</a></h5>
@@ -223,7 +223,7 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
-              <div class="card text-center">
+              <div class="card text-center bg-service-card">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x grey-text"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Augumented Reality</a></h5>
@@ -238,7 +238,7 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
-              <div class="card text-center bg-success text-white">
+              <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">PC Games</a></h5>
