--- a/services.html
+++ b/services.html
@@ -186,10 +186,10 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
-              <div class="card text-center bg-service-card">
+              <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Mobile Game App</a></h5>
+                  <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x text-white"></i></p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Mobile Game App</a></h5>
                   <p class="text-muted mb-4">Do you have a game in mind for years and want to
                     develop it on mobile devices for android and ios?, we will do it for you,
                     prepare the backlog and give you a quote and start development, do not
@@ -223,10 +223,10 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
-              <div class="card text-center bg-service-card">
+              <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x grey-text"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Augumented Reality</a></h5>
+                  <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x text-white"></i></p>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Augumented Reality</a></h5>
                   <p class="text-muted mb-4">augmented reality has been one of the most recent
                     attractions for all users, such as video games, education, general entertainment
                     and even movies, if you want to have an augmented reality project in your hands,
@@ -240,7 +240,7 @@
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x"></i></p>
+                  <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x text-white"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">PC Games</a></h5>
                   <p class="mb-4">PC games have always been one of the most attractive for users
                     who always like to play from the computer. Do you have a great idea of ​​a video
