implement services.html view

--- a/services.html
+++ b/services.html
@@ -172,9 +172,9 @@
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="fas fa-gamepad fa-4x"></i></p>
+                  <p class="mt-4 pt-2"><i class="fas fa-gamepad fa-4x text-white"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Gamification</a></h5>
-                  <p class="mb-4">Do you have a project which you want gamified?
+                  <p class="mb-4 text-white">Do you have a project which you want gamified?
                     Don't worry, we will analyze your project and give you a
                     proposal to gamify and develop it. If you want to know more
                     about what is gamification you can see it
@@ -190,7 +190,7 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x text-white"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Mobile Game App</a></h5>
-                  <p class="text-muted mb-4">Do you have a game in mind for years and want to
+                  <p class="text-white mb-4">Do you have a game in mind for years and want to
                     develop it on mobile devices for android and ios?, we will do it for you,
                     prepare the backlog and give you a quote and start development, do not
                     hesitate to contact us.</p>
@@ -203,9 +203,9 @@
             <div class="col-md-6 col-xl-3 mb-4">
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
-                  <p class="mt-4 pt-2"><i class="fas fa-vr-cardboard fa-4x"></i></p>
+                  <p class="mt-4 pt-2"><i class="fas fa-vr-cardboard fa-4x text-white"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Virtual Reality</a></h5>
-                  <p class="mb-4">Today virtual reality has advanced by leaps and bounds,
+                  <p class="text-white mb-4">Today virtual reality has advanced by leaps and bounds,
                     in industries such as tourism, archaeological and historical sites,
                     to name a few examples, don't stay behind and give it a chance to
                     have your own virtual reality project.</p>
@@ -227,7 +227,7 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x text-white"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Augumented Reality</a></h5>
-                  <p class="text-muted mb-4">augmented reality has been one of the most recent
+                  <p class="text-white mb-4">augmented reality has been one of the most recent
                     attractions for all users, such as video games, education, general entertainment
                     and even movies, if you want to have an augmented reality project in your hands,
                     we will develop it for you.</p>
@@ -242,7 +242,7 @@
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x text-white"></i></p>
                   <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">PC Games</a></h5>
-                  <p class="mb-4">PC games have always been one of the most attractive for users
+                  <p class="text-white mb-4">PC games have always been one of the most attractive for users
                     who always like to play from the computer. Do you have a great idea of ​​a video
                     game that you want to develop? Contact us and let us create that great game that
                     you have in mind.</p>
