--- a/services.html
+++ b/services.html
@@ -223,6 +223,7 @@
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
+              <!--Card-->
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x text-white"></i></p>
@@ -233,11 +234,13 @@
                     we will develop it for you.</p>
                 </div>
               </div>
+              <!--Card-->
             </div>
             <!--Grid column-->
 
             <!--Grid column-->
             <div class="col-md-6 col-xl-3 mb-4">
+              <!--Card-->
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x text-white"></i></p>
@@ -248,16 +251,133 @@
                     you have in mind.</p>
                 </div>
               </div>
+              <!--Card-->
             </div>
             <!--Grid column-->
 
           </div>
           <!--Grid row-->
-
-
-
         </section>
         <!-- Section Services-->
+
+        <div class="container z-depth-1 my-5">
+
+          <section class="text-center py-5">
+
+            <p class="mb-4 pb-2 lead font-weight-bold">Trusted by 1 000 000 + developers &amp; designers</p>
+
+            <!-- Logo carousel -->
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="1800">
+              <div class="carousel-inner">
+                <!-- First slide -->
+                <div class="carousel-item active">
+                  <!--Grid row-->
+                  <div class="row">
+
+                    <!--First column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/5.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/First column-->
+
+                    <!--Second column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/7.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Second column-->
+
+                    <!--Third column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/6.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Third column-->
+
+                    <!--Fourth column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/9.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Fourth column-->
+
+                  </div>
+                  <!--/Grid row-->
+                </div>
+                <!-- First slide -->
+
+                <!-- Second slide -->
+                <div class="carousel-item">
+                  <!--Grid row-->
+                  <div class="row">
+
+                    <!--First column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/11.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/First column-->
+
+                    <!--Second column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/10.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Second column-->
+
+                    <!--Third column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/12.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Third column-->
+
+                    <!--Fourth column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/13.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Fourth column-->
+
+                  </div>
+                  <!--/Grid row-->
+                </div>
+                <!-- Second slide -->
+
+                <!-- Third slide -->
+                <div class="carousel-item">
+                  <!--Grid row-->
+                  <div class="row">
+
+                    <!--First column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/1a.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/First column-->
+
+                    <!--Second column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/2a.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Second column-->
+
+                    <!--Third column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/3a.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Third column-->
+
+                    <!--Fourth column-->
+                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                      <img src="https://mdbootstrap.com/img/Photos/Template/4a.png" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Fourth column-->
+
+                  </div>
+                  <!--/Grid row-->
+                </div>
+                <!-- Third slide -->
+              </div>
+
+            </div>
+            <!-- Logo carousel -->
+
+          </section>
+
+        </div>
 
       </div>
       <!--Services container-->
