--- a/services.html
+++ b/services.html
@@ -173,7 +173,7 @@
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-gamepad fa-4x text-white"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Gamification</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#page-top">Gamification</a></h5>
                   <p class="mb-4 text-white">Do you have a project which you want gamified?
                     Don't worry, we will analyze your project and give you a
                     proposal to gamify and develop it. If you want to know more
@@ -189,7 +189,7 @@
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-mobile-alt fa-4x text-white"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Mobile Game App</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#page-top">Mobile Game App</a></h5>
                   <p class="text-white mb-4">Do you have a game in mind for years and want to
                     develop it on mobile devices for android and ios?, we will do it for you,
                     prepare the backlog and give you a quote and start development, do not
@@ -204,7 +204,7 @@
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-vr-cardboard fa-4x text-white"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Virtual Reality</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#page-top">Virtual Reality</a></h5>
                   <p class="text-white mb-4">Today virtual reality has advanced by leaps and bounds,
                     in industries such as tourism, archaeological and historical sites,
                     to name a few examples, don't stay behind and give it a chance to
@@ -227,7 +227,7 @@
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-binoculars fa-4x text-white"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Augumented Reality</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#page-top">Augumented Reality</a></h5>
                   <p class="text-white mb-4">augmented reality has been one of the most recent
                     attractions for all users, such as video games, education, general entertainment
                     and even movies, if you want to have an augmented reality project in your hands,
@@ -244,7 +244,7 @@
               <div class="card text-center bg-service-card text-white">
                 <div class="card-body">
                   <p class="mt-4 pt-2"><i class="fas fa-desktop fa-4x text-white"></i></p>
-                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">PC Games</a></h5>
+                  <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#page-top">PC Games</a></h5>
                   <p class="text-white mb-4">PC games have always been one of the most attractive for users
                     who always like to play from the computer. Do you have a great idea of ​​a video
                     game that you want to develop? Contact us and let us create that great game that
@@ -276,25 +276,25 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/5.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/unity-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/7.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/visual-studio-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/6.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/blender-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/9.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/substance-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
 
@@ -310,25 +310,25 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/11.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/spriter-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/10.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/krita-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/12.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/ae-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/13.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/ai-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
 
@@ -344,13 +344,13 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/1a.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/paintoolsai-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/2a.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/photoshop-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
