implement services.html view

--- a/services.html
+++ b/services.html
@@ -267,7 +267,7 @@
             <p class="mb-4 pb-2 lead font-weight-bold">Trusted by 1 000 000 + developers &amp; designers</p>
 
             <!-- Logo carousel -->
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="1800">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="2000">
               <div class="carousel-inner">
                 <!-- First slide -->
                 <div class="carousel-item active">
@@ -344,7 +344,7 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/paintoolsai-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/paintoolsai-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
