implement services.html view

--- a/services.html
+++ b/services.html
@@ -275,25 +275,25 @@
                   <div class="row">
 
                     <!--First column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/unity-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/visual-studio-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/blender-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/substance-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
@@ -309,25 +309,25 @@
                   <div class="row">
 
                     <!--First column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/spriter-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/krita-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/ae-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/ai-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
@@ -353,19 +353,6 @@
                       <img src="img/logo-tools/photoshop-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
-
-                    <!--Third column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/3a.png" class="img-fluid px-4" alt="Logo">
-                    </div>
-                    <!--/Third column-->
-
-                    <!--Fourth column-->
-                    <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
-                      <img src="https://mdbootstrap.com/img/Photos/Template/4a.png" class="img-fluid px-4" alt="Logo">
-                    </div>
-                    <!--/Fourth column-->
-
                   </div>
                   <!--/Grid row-->
                 </div>
