implement services.html view

--- a/services.html
+++ b/services.html
@@ -267,7 +267,7 @@
             <p class="mb-4 pb-2 lead font-weight-bold">Trusted by 1 000 000 + developers &amp; designers</p>
 
             <!-- Logo carousel -->
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="2000">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="2500">
               <div class="carousel-inner">
                 <!-- First slide -->
                 <div class="carousel-item active">
@@ -275,25 +275,25 @@
                   <div class="row">
 
                     <!--First column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/unity-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/visual-studio-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/blender-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/substance-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
@@ -309,25 +309,25 @@
                   <div class="row">
 
                     <!--First column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/spriter-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/krita-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/ae-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
-                    <div class="col-lg-3 col-md-6 pb-2 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
                       <img src="img/logo-tools/ai-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
