--- a/services.html
+++ b/services.html
@@ -272,7 +272,7 @@
                 <!-- First slide -->
                 <div class="carousel-item active">
                   <!--Grid row-->
-                  <div class="row">
+                  <div class="row d-flex justify-content-center text-center">
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
@@ -306,7 +306,7 @@
                 <!-- Second slide -->
                 <div class="carousel-item">
                   <!--Grid row-->
-                  <div class="row">
+                  <div class="row d-flex justify-content-center text-center">
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-3 d-flex align-items-center justify-content-center">
@@ -340,7 +340,7 @@
                 <!-- Third slide -->
                 <div class="carousel-item">
                   <!--Grid row-->
-                  <div class="row">
+                  <div class="row d-flex justify-content-center text-center">
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 d-flex align-items-center justify-content-center">
