implement services.html view

--- a/services.html
+++ b/services.html
@@ -260,11 +260,12 @@
         </section>
         <!-- Section Services-->
 
-        <div class="container z-depth-1 my-5">
+        <div class="container my-5">
 
           <section class="text-center py-5">
 
-            <p class="mb-4 pb-2 lead font-weight-bold">Trusted by 1 000 000 + developers &amp; designers</p>
+            <p class="mb-4 pb-2 lead font-weight-bold">These are some of the technologies that we generally
+              use, but we are always willing to adapt and learn new ones to be at the forefront</p>
 
             <!-- Logo carousel -->
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="2500">
