--- a/services.html
+++ b/services.html
@@ -345,7 +345,7 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/paintoolsai-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/paintoolsai-logo.png" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
