implement services.html view

--- a/services.html
+++ b/services.html
@@ -268,7 +268,7 @@
               use, but we are always willing to adapt and learn new ones to be at the forefront</p>
 
             <!-- Logo carousel -->
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="2500">
+            <div id="carouselSlidesLogos" class="carousel slide" data-ride="carousel" data-interval="2500">
               <div class="carousel-inner">
                 <!-- First slide -->
                 <div class="carousel-item active">
