implement services.html view

--- a/services.html
+++ b/services.html
@@ -268,7 +268,7 @@
               use, but we are always willing to adapt and learn new ones to be at the forefront</p>
 
             <!-- Logo carousel -->
-            <div id="carouselSlidesLogos" class="carousel slide white" data-ride="carousel" data-interval="2500">
+            <div id="carouselSlidesLogos" class="carousel slide" data-ride="carousel" data-interval="2500">
               <div class="carousel-inner">
                 <!-- First slide -->
                 <div class="carousel-item active">
@@ -277,25 +277,25 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/unity-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/unity-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/visual-studio-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/visual-studio-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/blender-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/csharp-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/substance-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/substance-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
 
@@ -311,25 +311,25 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/spriter-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/spriter-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/krita-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/krita-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/ae-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/blender-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/ai-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/tupi-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
 
@@ -345,15 +345,27 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/paintoolsai-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/paintoolsai-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/photoshop-logo.png" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/photoshop-logo.jpg" class="img-fluid px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
+
+                    <!--Third column-->
+                    <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
+                      <img src="img/logo-tools/ae-logo.jpg" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Third column-->
+
+                    <!--Fourth column-->
+                    <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
+                      <img src="img/logo-tools/ai-logo.jpg" class="img-fluid px-4" alt="Logo">
+                    </div>
+                    <!--/Fourth column-->
                   </div>
                   <!--/Grid row-->
                 </div>
