--- a/services.html
+++ b/services.html
@@ -289,13 +289,13 @@
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/csharp-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/csharp-logo.jpg" class="img-fluid img-circle px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/substance-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/substance-logo.jpg" class="img-fluid img-rounded px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
 
