--- a/services.html
+++ b/services.html
@@ -277,25 +277,25 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/unity-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/unity-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/visual-studio-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/visual-studio-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/csharp-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/csharp-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/substance-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/substance-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
 
@@ -311,25 +311,25 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/spriter-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/spriter-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/krita-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/krita-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/blender-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/blender-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/tupi-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/tupi-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
 
@@ -345,25 +345,25 @@
 
                     <!--First column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/paintoolsai-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/paintoolsai-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/First column-->
 
                     <!--Second column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/photoshop-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/photoshop-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Second column-->
 
                     <!--Third column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/ae-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/ae-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Third column-->
 
                     <!--Fourth column-->
                     <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-center justify-content-center">
-                      <img src="img/logo-tools/ai-logo.jpg" class="img-fluid px-4" alt="Logo">
+                      <img src="img/logo-tools/ai-logo.jpg" class="img-fluid rounded-lg px-4" alt="Logo">
                     </div>
                     <!--/Fourth column-->
                   </div>
