--- a/projects.html
+++ b/projects.html
@@ -154,13 +154,14 @@
     <div class="container">
 
       <!--Grid row-->
-      <div class="container my-5">
+      <div class="container my-5 py-5 elegant-color-dark">
 
         <!-- Section: Projects Content -->
-        <section class="dark-grey-text text-center">
+        <section class="text-white text-center">
 
           <h3 class="font-weight-bold mb-4 pb-2">Our best projects</h3>
-          <p class="text-muted w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam.
+          <p class="text-white-50 w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur
+            veniam.
           </p>
 
           <!-- Grid row -->
@@ -180,8 +181,8 @@
                 <a class="orange-text">
                   <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-chart-line pr-2"></i>Marketing</h6>
                 </a>
-                <h4 class="font-weight-bold mb-3">Title of the news</h4>
-                <p class="text-muted">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, adipisci velit cupidatat proident voluptatem quia numquam.</p>
+                <h4 class="font-weight-bold text-white mb-3">Title of the news</h4>
+                <p class="text-white-50">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, adipisci velit cupidatat proident voluptatem quia numquam.</p>
                 <a class="btn btn-success btn-rounded btn-md"> View more</a>
               </div>
 
@@ -202,8 +203,8 @@
                 <a class="blue-text">
                   <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-eye pr-2"></i>Entertainment</h6>
                 </a>
-                <h4 class="font-weight-bold mb-3">Title of the news</h4>
-                <p class="text-muted">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam nisi ut aliquid, aspernatur aut odit aut fugit.</p>
+                <h4 class="font-weight-bold text-white mb-3">Title of the news</h4>
+                <p class="text-white-50">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam nisi ut aliquid, aspernatur aut odit aut fugit.</p>
                 <a class="btn btn-success btn-rounded btn-md"> View more</a>
               </div>
 
